k8s/monitoring/overlays/alertmanager-discord/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-discord
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: alertmanager-discord
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alertmanager-discord
    spec:
      containers:
      - name: alertmanager-discord
        image: benjojo/alertmanager-discord:latest
        ports:
        - name: web
          containerPort: 9094
        resources:
          requests:
            cpu: 50m
          limits:
            cpu: 100m
