k8s/monitoring/overlays/alertmanager-discord/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-discord
spec:
  selector:
    app.kubernetes.io/name: alertmanager-discord
  ports:
  - name: web
    targetPort: web
    port: 9094
