k8s/monitoring/overlays/alertmanager-discord/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alertmanager-discord
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager-discord
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: alertmanager
    ports:
    - protocol: TCP
      port: 9094
